2022-07-05  Bruno Haible  <bruno@clisp.org>

	Add support for reproducible builds.
	Suggested by Richard Purdie <richard.purdie@linuxfoundation.org> in
	<https://lists.gnu.org/archive/html/bug-gperf/2022-07/msg00000.html>.
	* autogen.sh: Import also lib/filename.h.
	* Makefile.in (IMPORTED_FILES): Add lib/filename.h.
	* src/options.cc: Include filename.h.
	(Options::print_options): Print only the base name of the program name.
	* tests/*.exp: Update.

2022-05-22  Bruno Haible  <bruno@clisp.org>

	Add GNU Project notice.
	* JOIN-GNU: New file. Inspired by a suggestion from José E. Marchesi
	on the gnu-prog-discuss mailing list.
	* README: Refer to it.
	* Makefile.in (SOURCE_FILES): Add it.

2022-02-07  Bruno Haible  <bruno@clisp.org>

	tests: Fix undefined behaviour.
	* tests/test2.c (main): Cast bytes to unsigned before shifting left.

2022-01-05  Bruno Haible  <bruno@clisp.org>

	Release gperf-3.2.
	* src/version.cc (version_string): Bump to 3.2.
	* src/options.cc (Options::parse_options): Bump copyright year.
	* tests/*.exp: Update.
	* doc/gperf.texi: Bump date.

2021-06-06  Michael Drake  <tlsa@netsurf-browser.org>  (tiny change)

	Honor --readonly-tables when outputting table for --ignore-case.
	* src/output.cc (output_upperlower_table): Add 'const' when suitable.

2021-01-30  Bruno Haible  <bruno@clisp.org>

	Mark Autoconf 2.71 as supported.
	* autogen.sh: Update comment.

2020-12-08  Bruno Haible  <bruno@clisp.org>

	Mark Autoconf 2.70 as supported.
	* autogen.sh: Update comment.

2020-10-04  Bruno Haible  <bruno@clisp.org>

	Fix warnings from Autoconf 2.69c.
	* configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments.
	* doc/configure.ac: Likewise.
	* lib/configure.ac: Likewise.
	* src/configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments. Use
	AC_CACHE_CHECK, AC_LANG_PUSH/AC_LANG_POP, AC_COMPILE_IFELSE
	* tests/configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments. Use
	ac_cv_c_compiler_gnu instead of ac_cv_prog_gcc, and